# julius_ai

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  install-julius-ai.sh  test.rest
src/: api_julius.rs  command.rs  main.rs
